--- a/Data_processing.ipynb
+++ b/Data_processing.ipynb
@@ -7886,6 +7886,13 @@
     "    'JDW', 'BAG', 'THRL', 'HTWS',\n",
     "]\n",
     "\n",
+    "def data_processing(ftse_tickers):\n",
+    "    ftse_updated = []\n",
+    "    for ticker in ftse_tickers:\n",
+    "        ftse_updated.replace('', \"\")  # Add ' LN Equity' to each ticker\n",
+    "    return ftse_updated\n",
+    "\n",
+    "FTSE\n",
     "\n",
     "# define a class for data retrival\n",
     "class Stock_Processor:\n",
